Fixed overlapping issues of links on PECE Essay page.

--- a/src/modules/sandbox/panels_packery/plugins/panels/layouts/packery_layout/packery-layout.css
+++ b/src/modules/sandbox/panels_packery/plugins/panels/layouts/packery_layout/packery-layout.css
@@ -3,4 +3,5 @@
   padding-right: 10px;
   margin-bottom: 20px;
   box-sizing: border-box;
+  overflow: hidden;
 }
